log/build_2024-11-26_20-12-05/ros2_sheep/stdout_stderr.log
running egg_info
writing ../../build/ros2_sheep/ros2_sheep.egg-info/PKG-INFO
writing dependency_links to ../../build/ros2_sheep/ros2_sheep.egg-info/dependency_links.txt
writing entry points to ../../build/ros2_sheep/ros2_sheep.egg-info/entry_points.txt
writing requirements to ../../build/ros2_sheep/ros2_sheep.egg-info/requires.txt
writing top-level names to ../../build/ros2_sheep/ros2_sheep.egg-info/top_level.txt
reading manifest file '../../build/ros2_sheep/ros2_sheep.egg-info/SOURCES.txt'
writing manifest file '../../build/ros2_sheep/ros2_sheep.egg-info/SOURCES.txt'
running build
running build_py
copying ros2_sheep/wolf_node.py -> /home/teja/ros2_hunter/build/ros2_sheep/build/lib/ros2_sheep
copying ros2_sheep/hunter_node.py -> /home/teja/ros2_hunter/build/ros2_sheep/build/lib/ros2_sheep
copying ros2_sheep/sheep_node.py -> /home/teja/ros2_hunter/build/ros2_sheep/build/lib/ros2_sheep
running install
running install_lib
copying /home/teja/ros2_hunter/build/ros2_sheep/build/lib/ros2_sheep/wolf_node.py -> /home/teja/ros2_hunter/install/ros2_sheep/lib/python3.10/site-packages/ros2_sheep
copying /home/teja/ros2_hunter/build/ros2_sheep/build/lib/ros2_sheep/hunter_node.py -> /home/teja/ros2_hunter/install/ros2_sheep/lib/python3.10/site-packages/ros2_sheep
copying /home/teja/ros2_hunter/build/ros2_sheep/build/lib/ros2_sheep/sheep_node.py -> /home/teja/ros2_hunter/install/ros2_sheep/lib/python3.10/site-packages/ros2_sheep
byte-compiling /home/teja/ros2_hunter/install/ros2_sheep/lib/python3.10/site-packages/ros2_sheep/wolf_node.py to wolf_node.cpython-310.pyc
byte-compiling /home/teja/ros2_hunter/install/ros2_sheep/lib/python3.10/site-packages/ros2_sheep/hunter_node.py to hunter_node.cpython-310.pyc
  File "/home/teja/ros2_hunter/install/ros2_sheep/lib/python3.10/site-packages/ros2_sheep/hunter_node.py", line 1
    kimport rclpy
            ^^^^^
SyntaxError: invalid syntax

byte-compiling /home/teja/ros2_hunter/install/ros2_sheep/lib/python3.10/site-packages/ros2_sheep/sheep_node.py to sheep_node.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/teja/ros2_hunter/install/ros2_sheep/lib/python3.10/site-packages/ros2_sheep-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/ros2_sheep/ros2_sheep.egg-info to /home/teja/ros2_hunter/install/ros2_sheep/lib/python3.10/site-packages/ros2_sheep-0.0.0-py3.10.egg-info
running install_scripts
Installing hunter_node script to /home/teja/ros2_hunter/install/ros2_sheep/lib/ros2_sheep
Installing sheep_node script to /home/teja/ros2_hunter/install/ros2_sheep/lib/ros2_sheep
Installing wolf_node script to /home/teja/ros2_hunter/install/ros2_sheep/lib/ros2_sheep
writing list of installed files to '/home/teja/ros2_hunter/build/ros2_sheep/install.log'
